--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = 'mongodb+srv://enderdude786_db_user:enderdude%40786@cluster0.naykv8a.mongodb.net/'
+MONGO_URL = 'mongodb+srv://enderdude786_db_user:enderdude%40786@cluster0.naykv8a.mongodb.net/Cognivue-AI'
