--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.19.0",
     "multer": "^2.0.2",
     "papaparse": "^5.5.3",
+    "path": "^0.12.7",
     "xlsx": "^0.18.5"
   }
 }
