--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL = 'mongodb+srv://enderdude786_db_user:enderdude%40786@cluster0.naykv8a.mongodb.net/Cognivue-AI'
 JWT_SECRETKEY = "ZZ3PCnRXdZRbjpWx"
+GEMINI_API_KEY = AIzaSyDua8G9cKgFSbUrRMTXgG0V2IROz1lDsxw
